--- a/前后端交互.md
+++ b/前后端交互.md
@@ -1,5 +1,24 @@
-## 二、Vue获取后台Controller的Model数据
+## 二、thymeleaf获取后台Controller的Model数据
 #### 1.html中显示数据
+##### 1.1 使用th:text在标签中显示内容
 ```html
 <span th:text="${productId}"></span>
 ```
+
+##### 1.2 使用th:value在<input>组件中隐藏内容
+```html
+<input type="hidden" th:value="${productId}" id="product_id"/>
+```
+通过这种方法可以在js中获取数据：
+```js
+$("#product_id").val()
+```
+在js中获取数据的另一种方法是：
+```js
+<script th:inline="javascript">
+  var single = [[${singlePerson}]];
+  console.log(single.name+"/"+single.age)
+</script>
+```
+使用**[[${singlePerson}]]**.
+
