--- a/前后端交互.md
+++ b/前后端交互.md
@@ -20,5 +20,5 @@ $("#product_id").val()
   console.log(single.name+"/"+single.age)
 </script>
 ```
-使用**[[${singlePerson}]]**.
+使用"[[${singlePerson}]]".
 
