--- a/前后端交互.md
+++ b/前后端交互.md
@@ -1,3 +1,8 @@
+## 一、前端向后端传递的方式
+#### 1.form表单
+#### 2.ajax异步传值（局部刷新）
+
+
 ## 二、thymeleaf获取后台Controller的Model数据
 #### 1.html中显示数据
 ##### 1.1 使用th:text在标签中显示内容
