--- a/前后端交互.md
+++ b/前后端交互.md
@@ -27,3 +27,34 @@ $("#product_id").val()
 ```
 使用"[[${singlePerson}]]".
 
+## 三、页面间跳转（并传值）
+#### 1.通过controller跳转
+##### 1.1 前端<a>,后端@PathVariable
+html:
+```html
+  <div class="col-md-3 border" style="height:300px;margin-top:10px" v-for="product in products">
+    			<p class="text-center" style="margin-top:5px">
+    				<a :href="'/moon/Room/showRooms/'+product.productId">
+    				<img :alt="product.productName" :src="product.productImage" height="250px" width="250px" >
+    				</a>
+    			</p>
+     		 	<div class="form-inline">
+     		 		<div class="col-sm-6">{{product.productName}}</div>
+     		 		<div>
+     		 			<del style="font-size:12px">{{product.productPrice}}</del>
+     		 			<span style="color:red;font-size:16px;font-weight:bold">{{product.startPrice}}</span>
+     		 		</div>
+     		 		<div style="text-align:right">
+     		 			<label>{{product.productState|filterState}}</label>
+     		 		</div>
+     		 	</div>	
+```
+controller:
+```java
+    @RequestMapping("/showRooms/{productId}")
+	public String showRoom(@PathVariable("productId") int productId, Model model) {
+		System.out.println("productId->"+productId);
+		model.addAttribute("productId",productId);
+		return "views/rooms";
+	}
+```
