--- a/前后端交互.md
+++ b/前后端交互.md
@@ -29,7 +29,7 @@ $("#product_id").val()
 
 ## 三、页面间跳转（并传值）
 #### 1.通过controller跳转
-##### 1.1 前端<a>,后端@PathVariable
+##### 1.1 前端超链接a标签,后端@PathVariable
 html:
 ```html
   <div class="col-md-3 border" style="height:300px;margin-top:10px" v-for="product in products">
@@ -47,7 +47,8 @@ html:
      		 		<div style="text-align:right">
      		 			<label>{{product.productState|filterState}}</label>
      		 		</div>
-     		 	</div>	
+     		 	</div>
+	</div>
 ```
 controller:
 ```java
