--- a/前后端交互.md
+++ b/前后端交互.md
@@ -60,3 +60,24 @@ controller:
 	}
 ```
 #### 2.通过超链接a标签
+```js
+window.location.href="";//可以是路由，也可以是路径
+```
+2.1 获取url中的参数
+```js
+function getQueryVariable(variable)
+{
+       var query = window.location.search.substring(1);
+       var vars = query.split("&");
+       for (var i=0;i<vars.length;i++) {
+               var pair = vars[i].split("=");
+               if(pair[0] == variable){return pair[1];}
+       }
+       return(false);
+}
+```
+调用方法：
+```js
+ getQueryVariable("id");//"id"是参数名
+ ```
+ 
