--- a/数据库基础.md
+++ b/数据库基础.md
@@ -1,12 +1,26 @@
 ## 一、数据库事务ACID
-#### 事务：
+#### 事务(Transaction)
+
 #### 事务的四大特性（ACID）：
-##### 1.原子性
-##### 2.一致性
-##### 3.隔离性
-##### 4.持久性
+##### 1.原子性（Atomicity）
+一个事物内所有操作共同组成一个原子包，要么全部成功，要么全部失败。原子性保证了因为一些其他因素导致数据库异常，或者宕机。
+##### 2.一致性（Consistency）
+原子性只保证了一个事物内的所有操作同一性，大家同生死，不会出现你死了，我还活着。但是，原子性并没有保证大家同一时刻一起生，一起死。计算机指令是有先后顺序的，这样就决定了一个事物的提交，会经历一个时间过程，那么如果事物提交进行到了一半，我读取了数据库，会不会读到中间结果？
+
+为了防止这样的情况，数据库事物的一致性就规定了事物提交前后，永远只可能存在事物提交前的状态和事物提交后的状态，从一个一致性的状态到另一个一致性状态，而不可能出现中间的过程态。也就是说事物的执行结果是量子化状态，而不是线性状态。
+
+数据库提交事物会有一个过程，如果提交的时候，存在一个时间差，在提交的第一秒，一个删除过程还没完成到了第三秒才完成，会不会第一秒访问的人和第三秒访问的人得到不同的结果？出现不一致，状态的混沌？这就是一致性得保证的只会有前状态和后状态，绝不会出现中间态。
+
+
+
+##### 3.隔离性（Isolation）
+##### 4.持久性（Durability）
 #### 事务的隔离级别：
 ##### 1.读未提交
 ##### 2.读已提交
 ##### 3.可重复读
 ##### 4.串行化
+
+
+
+[转载自](https://www.jianshu.com/p/2a77146e70b4)
