--- a/数据库基础.md
+++ b/数据库基础.md
@@ -23,4 +23,4 @@
 
 
 
-[转载自](https://www.jianshu.com/p/2a77146e70b4)
+[转载自：https://www.jianshu.com/p/2a77146e70b4](https://www.jianshu.com/p/2a77146e70b4)
