--- a/数据库基础.md
+++ b/数据库基础.md
@@ -22,6 +22,11 @@
 读->写->读的过程，没有mvcc的情况下，；有mvcc的情况下
 ##### 4.串行化
 
+#### 悲观锁：
+描述的是一个流程，而不是特指某一种语言或某一种方法。
+流程：加锁判断->做业务->释放锁->其他事务得到锁
 
-
+#### 乐观锁：
+一边做业务一边判断，结果直接反映出成功失败。如：update--业务--where version=?(做业务的过程与where判断的过程是不可分割的)。所以乐观锁需要得层的支持，而java/c#/php这类高级语言原生是不支持的，但是数据库支持。
+场景：两个人打开了两个窗口，都显示某个值是100,。现在两人同时操作加20的业务，要求只有其中一个成功，这里就要用到乐观锁。
 [转载自：https://www.jianshu.com/p/2a77146e70b4](https://www.jianshu.com/p/2a77146e70b4)
