--- a/数据库基础.md
+++ b/数据库基础.md
@@ -27,6 +27,11 @@
 流程：加锁判断->做业务->释放锁->其他事务得到锁
 
 #### 乐观锁：
-一边做业务一边判断，结果直接反映出成功失败。如：update--业务--where version=?(做业务的过程与where判断的过程是不可分割的)。所以乐观锁需要得层的支持，而java/c#/php这类高级语言原生是不支持的，但是数据库支持。
-场景：两个人打开了两个窗口，都显示某个值是100,。现在两人同时操作加20的业务，要求只有其中一个成功，这里就要用到乐观锁。
+一边做业务一边判断，结果直接反映出成功失败。如：update--业务--where version=?(做业务的过程与where判断的过程是不可分割的)。所以乐观锁需要得层的支持，而java/c#/php这类高级语言原生是不支持的，但是数据库支持。  
+场景：两个人打开了两个窗口，都显示某个值是100,。现在两人同时操作加20的业务，要求只有其中一个成功，这里就要用到乐观锁。  
+  
+实际开发中遇上一个竞争性业务，首先上悲观锁，java层面部分代码用synchro包裹。这是万能方法，如果出现了集群，那么synchro改redis锁。如果出现了性能问题，那么再来考量此处业务能否适用乐观锁。如果能，改用乐观锁，如果不能，那么沿用悲观锁，性能问题用其他方法掩盖，但是一定要保证数据一致。  
+
+以上为刚性事务（每个瞬间都是一致性的），又叫强一致型事务，而柔性事务是指可能捕捉到的一段时间内数据不一致，但最终数据是守恒一致的，这种称为柔性一致，又称为最终一致性。很多情况下没法保证刚性一致，刚性一致只能发生在单库事务中，而现实是分布式的。分布式事务中多为柔性事务。分布式事务分为两种：一种是考虑回滚的分布式事务（补偿型，具体有xa和tcc）,另一种是不考虑回滚的分布式事务（mq确保型）。第一种需要借助第三方框架比如LCN。
+
 [转载自：https://www.jianshu.com/p/2a77146e70b4](https://www.jianshu.com/p/2a77146e70b4)
