--- a/前后端交互.md
+++ b/前后端交互.md
@@ -1,6 +1,7 @@
 ## 一、前端向后端传递的方式
-#### 1.form表单
-#### 2.ajax异步传值（局部刷新）
+#### 1.a标签超链接
+#### 2.form表单
+#### 3.ajax异步传值（局部刷新）
 
 
 ## 二、thymeleaf获取后台Controller的Model数据
@@ -79,5 +80,7 @@ function getQueryVariable(variable)
 调用方法：
 ```js
  getQueryVariable("id");//"id"是参数名
- ```
- 
+ ```  
+ ## 四、spring-boot前后端传递日期  
+ #### 1.前端往后端传递日期
+ #### 2.后端往前端传递日期
