--- a/前后端交互.md
+++ b/前后端交互.md
@@ -82,5 +82,30 @@ function getQueryVariable(variable)
  getQueryVariable("id");//"id"是参数名
  ```  
  ## 四、spring-boot前后端传递日期  
- #### 1.前端往后端传递日期
+ #### 1.前端往后端传递日期  
+ ```java
+ //传入的日期为String类型
+ String dt="2010-02-19";
+ SimpleDateFormat fmt=new SimpleDateFormat("yyyy-MM-dd");
+ Date dtx = fmt.parse(dt);
+ ```  
+ 
+ ```java
+ @DateTimeFormat(pattern="yyyy-MM-dd") Date dt//参数加注解
+ ```
+ 上面这种方法不提倡 
+ 
  #### 2.后端往前端传递日期
+ ##### 方法一：
+ 实体类字段添加注解
+ ```java
+ @JsonFormat(pattern="yyyy/MM/dd")//这里与使用的组件有关（这里是jackson），fastjson是JSONField（format="yyyy-MM-dd"）
+ private Date birth;
+ ```  
+ 使用哪个注解，取决于选用的序列化json库
+ ##### 方法二：  
+ 前端转换时间戳为北京时间
+ -js/jq库
+ -js/jq库+Vue过滤器
+ 
+ 
