--- a/前后端交互.md
+++ b/前后端交互.md
@@ -93,7 +93,15 @@ function getQueryVariable(variable)
  ```java
  @DateTimeFormat(pattern="yyyy-MM-dd") Date dt//参数加注解
  ```
- 上面这种方法不提倡 
+ 上面这种方法不提倡   
+ 使用@InitBinder在controller里写入
+ ```java
+ @InitBinder
+ public void init(WebDataBinder binder){
+ 	binder.registerCustomEditor(Date.class, CustomDateEditor(new SimpleDateFormat("yyyy-MM-dd"),true));
+ }
+ ```
+这个可以转任意类型，不只是date
  
  #### 2.后端往前端传递日期
  ##### 方法一：
@@ -102,7 +110,12 @@ function getQueryVariable(variable)
  @JsonFormat(pattern="yyyy/MM/dd")//这里与使用的组件有关（这里是jackson），fastjson是JSONField（format="yyyy-MM-dd"）
  private Date birth;
  ```  
- 使用哪个注解，取决于选用的序列化json库
+ 使用哪个注解，取决于选用的序列化json库  
+ 或者在application.properties配置文件中添加如下：
+ ```java
+spring.jackson.time-zone=GMT+8
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+ ```
  ##### 方法二：  
  前端转换时间戳为北京时间
  -js/jq库
