--- a/前后端交互.md
+++ b/前后端交互.md
@@ -101,7 +101,7 @@ function getQueryVariable(variable)
  	binder.registerCustomEditor(Date.class, CustomDateEditor(new SimpleDateFormat("yyyy-MM-dd"),true));
  }
  ```
-这个可以转任意类型，不只是date
+这个可以转任意类型，不只是date。可以将上面的代码写入到BaseController(父类controller)里，避免多次写入，也可以加@ControllerAdvice注解（这个注解意味着在contrller之前运行，全局异常时也加这个注解）。
  
  #### 2.后端往前端传递日期
  ##### 方法一：
