--- a/前后端交互.md
+++ b/前后端交互.md
@@ -121,4 +121,5 @@ spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
  -js/jq库
  -js/jq库+Vue过滤器
  
- 
+ ## 五、前后端分离
+ 核心思想：前端HTML页面通过AJAX调用后端的RESTFUL API接口并使用JSON数据进行交互。
