--- a/全文检索.md
+++ b/全文检索.md
@@ -92,3 +92,11 @@ discovery.seed_hosts
 cluster.initial_master_nodes
 # 使用初始的一组符合主节点条件的节点引导集群
 ```
+#### 2.application.properties
+```properties
+#es config
+spring.data.elasticsearch.cluster-name=elasticsearch
+spring.data.elasticsearch.cluster-nodes=localhost:9300
+```
+#### 3.网页访问地址
+http://localhost:9200/woniupaipai/product/_search
