--- a/数据库基础.md
+++ b/数据库基础.md
@@ -35,3 +35,12 @@
 以上为刚性事务（每个瞬间都是一致性的），又叫强一致型事务，而柔性事务是指可能捕捉到的一段时间内数据不一致，但最终数据是守恒一致的，这种称为柔性一致，又称为最终一致性。很多情况下没法保证刚性一致，刚性一致只能发生在单库事务中，而现实是分布式的。分布式事务中多为柔性事务。分布式事务分为两种：一种是考虑回滚的分布式事务（补偿型，具体有xa和tcc）,另一种是不考虑回滚的分布式事务（mq确保型）。第一种需要借助第三方框架比如LCN。
 
 [转载自：https://www.jianshu.com/p/2a77146e70b4](https://www.jianshu.com/p/2a77146e70b4)
+
+## 二、视图、索引、存储过程
+#### 视图：
+视图作为一种数据库对象，提供一张虚拟表。视图中的数据仍然存储在表中。视图由视图名和视图定义两个部分组成。视图是从一个或多个表导出来的，它实际上是一个查询结果，视图的名字和视图对应的查询存储在数据字典中。
+
+[转载自：https://www.cnblogs.com/SanMaoSpace/p/3147059.html](https://www.cnblogs.com/SanMaoSpace/p/3147059.html)
+#### 索引：
+索引是一种数据结构。
+#### 存储过程：
