--- a/框架.md
+++ b/框架.md
@@ -7,3 +7,6 @@ ClassPathXmlApplicationContext applicationContext = new ClassPathXmlApplicationC
 
 Object bean = applicationContext.getBean("user"); 
 ```
+
+## 2.RPC
+[转载自:https://blog.csdn.net/u014590757/article/details/80233901](https://blog.csdn.net/u014590757/article/details/80233901)
