--- a/位运算.md
+++ b/位运算.md
@@ -1,1 +1,2 @@
-[https://www.cnblogs.com/wxisme/p/8858514.html](https://www.cnblogs.com/wxisme/p/8858514.html)
+[转载自博客:https://www.cnblogs.com/wxisme/p/8858514.html](https://www.cnblogs.com/wxisme/p/8858514.html)
+[菜鸟教程:https://www.runoob.com/w3cnote/bit-operation.html](https://www.runoob.com/w3cnote/bit-operation.html)
