--- a/位运算.md
+++ b/位运算.md
@@ -1,3 +1,10 @@
 [转载自博客:https://www.cnblogs.com/wxisme/p/8858514.html](https://www.cnblogs.com/wxisme/p/8858514.html)  
 
 [菜鸟教程:https://www.runoob.com/w3cnote/bit-operation.html](https://www.runoob.com/w3cnote/bit-operation.html)
+
+
+	if status == 1 { // status为要设置的状态为1
+		info = info | (1 << index)  // 将index位置的值设置为1
+	} else {
+		info = info &^ (1 << index) // 将index位置清0
+	}
