--- a/位运算.md
+++ b/位运算.md
@@ -1,6 +1,16 @@
 [转载自博客:https://www.cnblogs.com/wxisme/p/8858514.html](https://www.cnblogs.com/wxisme/p/8858514.html)  
 
-[菜鸟教程:https://www.runoob.com/w3cnote/bit-operation.html](https://www.runoob.com/w3cnote/bit-operation.html)
+[菜鸟教程:https://www.runoob.com/w3cnote/bit-operation.html](https://www.runoob.com/w3cnote/bit-operation.html)  
+
+## 与运算  
+#### 1. 判断奇偶数
+	num := 90
+	if num & 1 == 1{
+		fmt.Println("奇数")
+	} else if num & 1== 0{
+		fmt.Println("偶数")
+	}  
+
 
 
 	if status == 1 { // status为要设置的状态为1
