--- a/位运算.md
+++ b/位运算.md
@@ -3,7 +3,9 @@
 [菜鸟教程:https://www.runoob.com/w3cnote/bit-operation.html](https://www.runoob.com/w3cnote/bit-operation.html)  
 
 ## 与运算  
-#### 1. 判断奇偶数
+#### 1. 判断奇偶数  
+该数二进制的最后一位是0的话那么就为偶数。是1的话就为奇数  
+
 	num := 90
 	if num & 1 == 1{
 		fmt.Println("奇数")
